--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
-    <h1>hello</h1>
+    <h1>hello, my name is Rhys</h1>
 </head>
 <body>
     
