--- a/site/index.html
+++ b/site/index.html
@@ -7,9 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
-    <h1>hello, my name is Rhys and i am 17</h1>
+    <h1>Hola, i know how to work this now</h1>
 </head>
 <body>
-    
+My shopping list:
+<ul>
+    <li> Milk</li>
+    <li>hot dogs</li>
+    <li>cookies</li>
+        <ul>
+            <li>sugar</li>
+            <li>chocolate</li>
+        </ul>
+    <li> more milk</li>
+</ul>
+To make these cookies:
+<oi>
+    <li> go and collect mum</li>
+    <li>get her to make them</li>
+</oi>
+<h1> internal links</h1>
+<section>
+    <a href="index2.html" title=same"welcome" here is the internal link>
+        <div> index2.html</div>
+    </a>
+</section>
+<h1> external links</h1>
+<section>
+    <a href="https://www.facebook.com/rhys.doherty.14" title="facebook page"> facebook</a>
+</section>
+<footer> Rhys Doherty &copy; Copyright</footer>
+
 </body>
-</html>
+</html> 
