--- a/site/index.html
+++ b/site/index.html
@@ -2,41 +2,31 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> hello, my name is rhys</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-    <h1>Hola, i know how to work this now</h1>
+    <title>Rhys Doherty</title>
+    <h1>welcome to my website</h1>
 </head>
 <body>
-My shopping list:
-<ul>
-    <li> Milk</li>
-    <li>hot dogs</li>
-    <li>cookies</li>
-        <ul>
-            <li>sugar</li>
-            <li>chocolate</li>
-        </ul>
-    <li> more milk</li>
-</ul>
-To make these cookies:
-<oi>
-    <li> go and collect mum</li>
-    <li>get her to make them</li>
-</oi>
-<h1> internal links</h1>
-<section>
-    <a href="index2.html" title=same"welcome" here is the internal link>
-        <div> index2.html</div>
-    </a>
-</section>
-<h1> external links</h1>
-<section>
-    <a href="https://www.facebook.com/rhys.doherty.14" title="facebook page"> facebook</a>
-</section>
-<footer> Rhys Doherty &copy; Copyright</footer>
-
+    <title>My shopping list</title>
+    <section>
+        <oi>
+            <li>Milk</li>
+            <li> Chocolate</li>
+            <li> Tuna Pasta</li>
+            <oi>
+                <li>Tuna</li>
+                <li>Pasta</li>
+                <li>cheese</li>
+            </oi>
+        </oi>
+    </section>
+    <h1>Internal Link</h1>
+    <section>
+        <a href="index2.html">Click here for the internal link</a>
+    </section>
+    <h1> External Link</h1>
+    <section>
+        <a href="http//www.facebook.com/rhysdoherty.14"> This is the link to my Facebook Page</a>
+    </section>
+    <footer> Rhys Doherty &copy;Copyright</footer>
 </body>
-</html> 
+</html>
